# exercise-1-chess-SalehNaamneh

./: CMakeLists.txt  README.md
Chess/: CMakeLists.txt
Chess/include/: Bishop.h  CMakeLists.txt  Chess.h  GameLogic.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rock.h
Chess/src/: Bishop.cpp  Chess.cpp  GameLogic.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rock.cpp  main.cpp
